--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </div>
 
                         <span class="footer__copy">
-                            &#169; Copyright Lewis Wachira. All rights reserved
+                            &#169; Copyright NetKrafter. All rights reserved
                         </span>
                     </div>
                 </div>
